crates/claptrap-core/tests/snapshots/tests__command__display_name.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_61fd643e'
my_program 0.1.0
EOF_61fd643e
exit 0
