crates/claptrap-core/tests/snapshots/tests__command__external_subcommand_value_parser.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='subcmd'
