crates/claptrap-core/tests/snapshots/tests__command__groups.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_major='1'
claptrap_iface='eth0'
