crates/claptrap-core/tests/snapshots/tests__command__help_expected.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_59c439b3'
[1m[4mUsage:[0m [1mmyprog[0m [foo]

[1m[4mArguments:[0m
  [foo]  It does foo stuff

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_59c439b3
exit 0
