crates/claptrap-core/tests/snapshots/tests__command__ignore_errors.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_config='file'
